platon basis commit

--- a/tox.ini
+++ b/tox.ini
@@ -26,4 +26,4 @@ extras =
 [testenv:lint]
 basepython=python
 extras = lint
-commands=flake8 {toxinidir}/eth_tester {toxinidir}/tests
+commands=flake8 {toxinidir}/platon_tester {toxinidir}/tests
